@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
-<addon id="plugin.video.faros.on-air" name="Faros On-Air" version="1.3.3" provider-name="Twilight0">
+<addon id="plugin.video.faros.on-air" name="Faros On-Air" version="1.4.0" provider-name="Twilight0">
     <requires>
         <import addon="xbmc.addon" version="16.1.000"/>
-        <import addon="plugin.video.youtube" version="6.8.2"/>
-        <import addon="script.module.tulip" version="2.8.1"/>
+        <import addon="plugin.video.youtube" version="6.8.10"/>
+        <import addon="script.module.tulip" version="2.8.9"/>
     </requires>
     <extension point="xbmc.python.pluginsource" library="addon.py">
         <provides>video</provides>
@@ -20,19 +20,11 @@
         <size>738082</size>
         <website>https://farosonair.com/</website>
         <source>https://github.com/Twilight0/plugin.video.faros.on-air</source>
-    </extension>
-    <!--<extension name="Faros On Air Repo" point="xbmc.addon.repository">-->
-        <!--<info compressed="false">http://alivegr.net/repo/_faros/addons.xml</info>-->
-        <!--<checksum>http://alivegr.net/repo/_faros/addons.xml.md5</checksum>-->
-        <!--<datadir zip="true">http://alivegr.net/repo/_faros/</datadir>-->
-        <!--<hashes>false</hashes>-->
-        <!--<dir>-->
-            <!--<info compressed="false">https://raw.githubusercontent.com/Twilight0/repo.twilight0.libs/master/_zips/addons.xml</info>-->
-            <!--<checksum>https://raw.githubusercontent.com/Twilight0/repo.twilight0.libs/master/_zips/addons.xml.md5</checksum>-->
-            <!--<datadir zip="true">https://raw.githubusercontent.com/Twilight0/repo.twilight0.libs/master/_zips/</datadir>-->
-        <!--</dir>-->
-    <!--</extension>-->
-    <news>29-11-2020 - [B]1.3.2[/B]
+        <news>16-03-2021 - [B]1.4.0[/B]
+- Utilize function cache instead of get
+- Fixes into addon.xml
+
+29-11-2020 - [B]1.3.2[/B]
 - Update youtube api key
 
 31-08-2020 - [B]1.3.1[/B]
@@ -53,4 +45,16 @@
         <icon>icon.png</icon>
         <fanart>fanart.jpg</fanart>
     </assets>
+    </extension>
+    <!--<extension name="Faros On Air Repo" point="xbmc.addon.repository">-->
+        <!--<info compressed="false">http://alivegr.net/repo/_faros/addons.xml</info>-->
+        <!--<checksum>http://alivegr.net/repo/_faros/addons.xml.md5</checksum>-->
+        <!--<datadir zip="true">http://alivegr.net/repo/_faros/</datadir>-->
+        <!--<hashes>false</hashes>-->
+        <!--<dir>-->
+            <!--<info compressed="false">https://raw.githubusercontent.com/Twilight0/repo.twilight0.libs/master/_zips/addons.xml</info>-->
+            <!--<checksum>https://raw.githubusercontent.com/Twilight0/repo.twilight0.libs/master/_zips/addons.xml.md5</checksum>-->
+            <!--<datadir zip="true">https://raw.githubusercontent.com/Twilight0/repo.twilight0.libs/master/_zips/</datadir>-->
+        <!--</dir>-->
+    <!--</extension>-->
 </addon>
