@@ -1,3 +1,7 @@
+16-03-2021 - [B]1.4.0[/B]
+- Utilize function cache instead of get
+- Fixes into addon.xml
+
 29-11-2020 - [B]1.3.2[/B]
 - Update youtube api key
 
